[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "process_onestop_sr_report"
version = "0.3.8"
authors = [
  { name="Omer Shubi", email="omer.shubi@gmail.com" },
]
description = "All scripts related to preprocessing OneStopGaze"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO temporary
    "Operating System :: OS Independent",
]

dependencies = [
  "pandas",
  'typed-argument-parser',
  'text_metrics @ git+https://git@github.com/lacclab/text-metrics.git', # TODO freeze before release @1.0.0 for example
  "numpy",
  "spacy",
]


[project.urls]
"Homepage" = "https://github.com/lacclab/process-onestop-sr-report"
"Bug Tracker" = "https://github.com/lacclab/process-onestop-sr-report/issues"

[tool.hatch.metadata]
allow-direct-references = true
